--- a/additions/styles/stylish-portfolio.css
+++ b/additions/styles/stylish-portfolio.css
@@ -164,7 +164,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../images/blok1/background.jpg) no-repeat center center scroll;
+    background: url(../../images/blok1/background.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -271,7 +271,7 @@ hr.small {
     width: 100%;
     height: 400px;
     color: #fff;
-    background: url(../images/blok4/background.png) no-repeat center center scroll;
+    background: url(../../images/blok4/background.png) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -290,7 +290,7 @@ hr.small {
 
 .portfolio {
     padding: 50px 0;
-    background:url(../images/blok5/fon.png) #212056 no-repeat center center scroll;
+    background:url(../../images/blok5/fon.png) #212056 no-repeat center center scroll;
     opacity: 1;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -325,7 +325,7 @@ hr.small {
 }
 
 .img-ramka{
-    background: url("/images/blok5/dzhinsovy-pattern.png"); /* родительский фон за счёт padding */
+    background: url("../../images/blok5/dzhinsovy-pattern.png"); /* родительский фон за счёт padding */
     padding: 5px;
     border: solid 10px white;
     box-shadow: 0 0 0 1px #a5af2a;
@@ -372,7 +372,7 @@ hr.small {
 
 #for_images {
     padding: 50px 0;
-    background:url(../images/blok6/simple-carousel.png) #212056 no-repeat center center scroll;
+    background:url(../../images/blok6/simple-carousel.png) #212056 no-repeat center center scroll;
     opacity: 1;
     -webkit-background-size: cover;
     -moz-background-size: cover;
